bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_missing_attr.stderr
error: a #[batpak(...)] attribute is required
 --> tests/trybuild_negative/event_missing_attr.rs:2:10
  |
2 | #[derive(Event)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Event` (in Nightly builds, run with -Z macro-backtrace for more info)
