bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_missing_attr.rs
use macbat::Event;
#[derive(Event)]
struct E {
    a: u8,
}
fn main() {}
